[package]
name = "fawkes-crypto-zkbob-keccak256"
version = "0.1.1"
edition = "2021"
description = "Keccak256 hash function for Fawkes Crypto"
authors = ["Igor Gulamov"]
license = "MIT"

[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.3.1"

[dependencies.fawkes-crypto]
git = "https://github.com/zkBob/fawkes-crypto"
branch = "fawkes-crypto-zkbob"
package = "fawkes-crypto-zkbob"
version = "4.5.0"
features = ["rand_support"]


[dev-dependencies]
itertools = "0.10.3"